--- a/Machine Learning in Civil Engineering with Apache Spark.ipynb
+++ b/Machine Learning in Civil Engineering with Apache Spark.ipynb
@@ -441,7 +441,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Date Preparation Automation Module\n",
+    "## Data Preparation Automation Module\n",
     "\n",
     "MLlib requires all dataframe input columns to be vectorized. Let's create a Python function that will automate our data preparation work, including vectorization and all the necessary tasks."
    ]
